--- a/js-numerals/src/assets/sass/_responsive.scss
+++ b/js-numerals/src/assets/sass/_responsive.scss
@@ -18,13 +18,13 @@
 	.number-words{
 		.undo{
 			top: 2vw;
-			right: 4vw;			
-			font-size: 12vw;
+			right: 1vw;			
+			font-size: 7vw;
 		}
 	}
 
 	.reveal-text {
 		font-size: 12vw;
-		padding: 0 6vw;
+		padding: 0 8vw;
 	}
 }
